# huffman-archiver

./: CMakeLists.txt
src/: huffman.cpp  huffman.h  main.cpp
test/: doctest.h  huffman_test.cpp  huffman_test.h  test.cpp
